New entries should be added at the top

2005-07-03 Fixed a bug related to TeX commands in backend_ps

2005-08-03 Fixed SVG images to respect uppoer and lower origins.

2005-08-03 Added flipud method to image and removed it from to_str.

2005-07-29 Modified figure.figaspect to take an array or number;
           modified backend_svg to write utf-8 - JDH

2005-07-30 backend_svg.py: embed png image files in svg rather than linking
           to a separate png file, fixes bug #1245306 (thanks to Norbert Nemec 
           for the patch) - SC

=======================================================================

2005-07-29 Released 0.83.2

2005-07-27 Applied SF patch 1242648: minor rounding error in
           IndexDateFormatter in dates.py

2005-07-27 Applied sf patch 1244732: Scale axis such that circle
           looks like circle - JDH
2005-07-29 Improved message reporting in texmanager and backend_ps - DSD

2005-07-28 backend_gtk.py: update FigureCanvasGTK.draw() (needed due to the
           recent expose_event() change) so that examples/anim.py works in the 
           usual way - SC

2005-07-26 Added new widgets Cursor and HorizontalSpanSelector to
           matplotlib.widgets.  See examples/widgets/cursor.py and
           examples/widgets/span_selector.py - JDH

2005-07-26 added draw event to mpl event hierarchy -- triggered on
           figure.draw

2005-07-26 backend_gtk.py: allow 'f' key to toggle window fullscreen mode

2005-07-26 backend_svg.py: write "<.../>" elements all on one line and remove 
           surplus spaces - SC

2005-07-25 backend_svg.py: simplify code by deleting GraphicsContextSVG and
           RendererSVG.new_gc(), and moving the gc.get_capstyle() code into
           RendererSVG._get_gc_props_svg() - SC

2005-07-24 backend_gtk.py: call FigureCanvasBase.motion_notify_event() on
           all motion-notify-events, not just ones where a modifier key or
           button has been pressed (fixes bug report from Niklas Volbers) - SC
